syntax = "proto3";

package Proto;

message pkg_info {
    int64 size = 1;
    string hash_alg = 2;
    bytes hash_value = 3;
    string control = 4;
    uint64 time = 5;
    message file_info {
        string path = 1;
        bool is_dir = 3;
        int64 size = 4;
        uint32 type = 5;
        uint32 perm = 6;
        int64 uid = 7;
        int64 gid = 8;
        string uname = 9;
        string gname = 10;
    }
    repeated file_info files = 6;
    repeated string so_provides = 7;
    repeated string so_depends = 8;
}
